--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class="nav-item"><a class="nav-link" href="tramite.html">TRAMITES</a></li>
             <li class="nav-item"><a class="nav-link" href="#">SERVICIOS EN LÍNEA</a></li>
             <li class="nav-item"><a class="nav-link" href="#">CONÓCENOS</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">APOYO SOCIAL</a></li>
+            <li class="nav-item"><a class="nav-link" href="consulta.html">CONSULTA</a></li>
             <li class="nav-item"><a class="nav-link" href="#">REGISTRO ELECTORAL</a></li>
           </ul>
         </div>
@@ -125,7 +125,7 @@
             <div class="card-body p-0">
               <h6 class="card-title mb-2"><strong>Servicios en línea</strong></h6>
               <ul class="list-unstyled mb-0">
-                <li>Empresas</li>
+                <li><a class="nav-link" href="reclamo.html">Reclamo</a></li>
                 <li>Ciudadano</li>
                 <li>Consultas</li>
               </ul>
